# mandelbroat

./: .gitignore  CMakeLists.txt
common/: IndexBuffer.cpp  Renderer.cpp  Shaders.cpp  Utils.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
include/: IndexBuffer.h  Renderer.h  Shaders.h  Utils.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
res/shaders/: Shader.vs
src/: Main.cpp
